--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-<head>
-  <title>Hola Mundo</title>
-</head>
+    <head>
+        <title>La Web Page</title>
+        <h1>Hola mundo, aqui es la pagina donde se hosteara la pagina de la mafia :v</h1>
+    </head>
 </html>
